# vision-camera-plugin-anpr

./: .gitignore  .repopackignore  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json  vision-camera-plugin-anpr.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/assets/: openalpr.conf
android/src/main/assets/openalpr/: openalpr.conf
android/src/main/assets/openalpr/runtime_data/config/: eu.conf
android/src/main/assets/openalpr/runtime_data/postprocess/: eu.patterns  gb.patterns
android/src/main/java/com/visioncamerapluginanpr/: AssetUtils.kt  VisionCameraPluginAnprModule.kt  VisionCameraPluginAnprPackage.kt
android/src/main/shaders/: compute_shader.comp  compute_shader.recent  compute_shader.spv
android/src/newarch/: VisionCameraPluginAnprSpec.kt
android/src/oldarch/: VisionCameraPluginAnprSpec.kt
cpp/: VulkanProcessor.cpp  VulkanProcessor.h  VulkanRotator.h  vision-camera-plugin-anpr.cpp  vision-camera-plugin-anpr.h
cpp/old_code/: Vulkan Old.h  VulkanProcessor - logging.h  Working Grayscal.cpp  file-saving.cpp  last-night.cpp  original.cpp  with-file-saving.cpp
example/: app.json  index.js  package.json  react-native.config.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/visioncamerapluginanpr.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/VisionCameraPluginAnprExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/VisionCameraPluginAnprExample.xcodeproj/: project.pbxproj
example/ios/VisionCameraPluginAnprExample.xcodeproj/xcshareddata/xcschemes/: VisionCameraPluginAnprExample.xcscheme
example/ios/VisionCameraPluginAnprExampleTests/: VisionCameraPluginAnprExampleTests.m
example/src/: App.tsx
example/src/components/: RoundedButton.tsx
example/src/screens/: ChooseFileScreen.tsx  FrameProcessor.tsx  HomeScreen.tsx  RealTimeRecogniseScreen.tsx  RealTimeScanScreen.tsx
example/src/services/: request-permission.service.ts
example/src/types/: navigation.ts
ios/: VisionCameraPluginAnpr.h  VisionCameraPluginAnpr.mm
libs/include/openalpr/: alpr.h
src/: NativeVisionCameraPluginAnpr.ts  index.tsx  plugin.ts
src/context/: alpr.context.tsx
src/hooks/: useALPR.ts
src/services/: alpr.service.ts
src/types/: global.d.ts  openalpr.ts
